--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT = "3000"
+MONGODB_URL = "mongodb+srv://jasingha2002sadininipunika_db_user:iWyudFI9VsIKRuwQ@cluster0.jtgosyu.mongodb.net/BOOKSTORE"
